tests/snapshots/cli__array_contains.diff.snap
---
source: tests/cli.rs
expression: diff
---
 {

   "type": "record",

   "name": "document_wrapper",

   "namespace": "array_contains.utility",

   "fields": [

     {

       "name": "items",

       "type": {

-        "name": "Array_Contains_Example",

         "type": "array",

-        "items": [["int"]]

+        "items": [["int",]]

+[[        "name": "Array_Contains_Example"]]

       }

     }

   ]

 }
