tests/snapshots/cli__array_contains.snap
---
source: tests/cli.rs
expression: json
---
{
  "type": "record",
  "name": "document_wrapper",
  "namespace": "array_contains.utility",
  "fields": [
    {
      "name": "items",
      "type": {
        "type": "array",
        "items": "int",
        "name": "Array_Contains_Example"
      }
    }
  ]
}
