tests/snapshots/cli__array_maxitems.diff.snap
---
source: tests/cli.rs
expression: diff
---
 {

   "type": "record",

   "name": "document_wrapper",

   "namespace": "array_maxitems.utility",

   "fields": [

     {

       "name": "items",

       "type": {

-        "name": "Array_with_maxItems",

         "type": "array",

-        "items": [["int"]]

+        "items": [["int",]]

+[[        "name": "Array_with_maxItems"]]

       }

     }

   ]

 }
