tests/snapshots/cli__array_maxitems.snap
---
source: tests/cli.rs
expression: json
---
{
  "type": "record",
  "name": "document_wrapper",
  "namespace": "array_maxitems.utility",
  "fields": [
    {
      "name": "items",
      "type": {
        "type": "array",
        "items": "int",
        "name": "Array_with_maxItems"
      }
    }
  ]
}
