tests/snapshots/cli__array_of_objects.snap
---
source: tests/cli.rs
expression: json
---
{
  "type": "record",
  "name": "document",
  "namespace": "array_of_objects",
  "fields": [
    {
      "name": "items",
      "type": {
        "type": "array",
        "items": {
          "type": "record",
          "name": "items",
          "namespace": "array_of_objects.document_types",
          "fields": [
            {
              "name": "id",
              "type": "int"
            },
            {
              "name": "label",
              "type": [
                "null",
                "string"
              ]
            }
          ]
        }
      }
    }
  ]
}
