tests/snapshots/cli__array_uniqueitems.diff.snap
---
source: tests/cli.rs
expression: diff
---
 {

   "type": "record",

   "name": "document_wrapper",

   "namespace": "array_uniqueitems.utility",

   "fields": [

     {

       "name": "items",

       "type": {

-        "name": "Unique_Items_Array",

         "type": "array",

-        "items": [["int"]]

+        "items": [["int",]]

+[[        "name": "Unique_Items_Array"]]

       }

     }

   ]

 }
