tests/snapshots/cli__array_uniqueitems.snap
---
source: tests/cli.rs
expression: json
---
{
  "type": "record",
  "name": "document_wrapper",
  "namespace": "utility",
  "fields": [
    {
      "name": "items",
      "type": {
        "type": "array",
        "items": "int"
      }
    }
  ]
}
