tests/snapshots/cli__array_with_additional_items.snap
---
source: tests/cli.rs
expression: json
---
{
  "type": "record",
  "name": "document_wrapper",
  "namespace": "array_with_additional_items.utility",
  "fields": [
    {
      "name": "items",
      "type": {
        "type": "array",
        "items": [
          {
            "type": "string"
          }
        ],
        "name": "Array_with_Additional_Items_Restriction"
      }
    }
  ]
}
