tests/snapshots/cli__basic_object_schema.snap
---
source: tests/cli.rs
expression: json
---
{
  "fields": [
    {
      "name": "name",
      "type": "string"
    }
  ],
  "name": "Document",
  "namespace": "schema",
  "type": "record"
}
