tests/snapshots/cli__basic_string_schema.snap
---
source: tests/cli.rs
expression: json
---
{
  "type": "record",
  "name": "Document",
  "namespace": "schema",
  "fields": [
    {
      "name": "name",
      "type": "string"
    }
  ]
}
